--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,51 @@
 .App {
+  align-items: center;
+  background: rgb(4, 82, 107);
+  background: linear-gradient(
+    90deg,
+    rgba(4, 82, 107, 1) 2%,
+    rgba(0, 67, 97, 1) 76%,
+    rgba(13, 134, 159, 1) 100%
+  );
+}
+
+header {
+  font-size: 100px;
+  background: rgb(25, 156, 158);
+  background: linear-gradient(
+    0deg,
+    rgba(25, 156, 158, 0.8463760504201681) 9%,
+    rgba(7, 106, 126, 1) 59%,
+    rgba(10, 101, 138, 1) 97%
+  );
+  padding: 40px;
+  border-bottom-left-radius: 100px;
+  border-bottom-right-radius: 100px;
+  margin-bottom: 20px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.ticket {
+  background: rgba(172, 213, 214, 0.658);
+  width: 90vw;
+  margin-left: 5vw;
+  border-radius: 50px;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+.search {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.restore-section {
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p {
+  font-size: 18px;
+  font-weight: 600;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  font-weight: bold;
 }
