--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,7 @@
     rgba(0, 67, 97, 1) 76%,
     rgba(13, 134, 159, 1) 100%
   );
+  height: 100vh;
 }
 
 header {
@@ -32,9 +33,22 @@ header {
   padding: 20px;
   margin-bottom: 20px;
 }
+.ticket-notFound {
+  background: rgba(172, 213, 214, 0.658);
+  width: 90vw;
+  margin-left: 5vw;
+  border-radius: 50px;
+  padding: 20px;
+  text-align: center;
+}
 .search {
   text-align: center;
   margin-bottom: 20px;
+}
+#searchInput {
+  width: 400px;
+  height: 50px;
+  font-size: 30px;
 }
 .restore-section {
   text-align: center;
