--- a/client/src/styles/counter.css
+++ b/client/src/styles/counter.css
@@ -11,3 +11,10 @@
   text-align: center;
   margin-bottom: 20px;
 }
+#hideTicketsCounter {
+  font-weight: bold;
+  font-size: 18px;
+}
+.hidden-text {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
