--- a/client/src/styles/ticket.css
+++ b/client/src/styles/ticket.css
@@ -7,6 +7,7 @@
   padding: 20px;
   margin-bottom: 20px;
 }
+
 .ticket-notFound {
   background: rgba(172, 213, 214, 0.658);
   width: 90vw;
@@ -15,7 +16,22 @@
   padding: 20px;
   text-align: center;
 }
+
 .hideTicketButton {
   background: rgba(32, 178, 171, 0);
   border-color: rgba(32, 178, 171, 0);
+  margin-left: 90%;
+}
+
+.label {
+  background-color: rgb(18, 39, 49);
+  color: antiquewhite;
+  font-size: 18px;
+  font-family: cursive;
+  font-weight: 400;
+  margin: 3px;
+  border-radius: 5px;
+}
+.label-span {
+  margin-left: 85%;
 }
