--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -25,19 +25,9 @@ header {
   text-align: center;
 }
 
-.search {
-  text-align: center;
-  margin-bottom: 20px;
-}
-#searchInput {
-  width: 400px;
-  height: 50px;
-  font-size: 30px;
-  padding: 15px;
-  border-radius: 40px;
-}
 h1 {
   margin-top: 0;
+  font-family: cursive;
 }
 p {
   font-size: 18px;
