--- a/client/src/styles/counter.css
+++ b/client/src/styles/counter.css
@@ -3,6 +3,7 @@
   background-color: rgba(199, 199, 199, 0.603);
   padding: 5px;
   border-radius: 5px;
+  font-family: cursive;
 }
 .counter-section {
   margin: 10px;
@@ -15,6 +16,15 @@
   font-weight: bold;
   font-size: 18px;
 }
+
+#restoreHideTickets {
+  background: none;
+  font-size: 17px;
+  font-family: sans-serif;
+  border: none;
+  color: darkblue;
+}
+
 .hidden-text {
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: cursive;
 }
