--- a/client/src/styles/ticket.css
+++ b/client/src/styles/ticket.css
@@ -19,8 +19,11 @@
 
 .hideTicketButton {
   background: rgba(32, 178, 171, 0);
-  border-color: rgba(32, 178, 171, 0);
+  border: none;
   margin-left: 90%;
+  font-family: cursive;
+  font-size: 16px;
+  text-decoration: underline;
 }
 
 .label {
