--- a/client/src/styles/ticket.css
+++ b/client/src/styles/ticket.css
@@ -8,6 +8,16 @@
   margin-bottom: 20px;
 }
 
+.doneTicket {
+  background: gray;
+  width: 90vw;
+  margin-left: 3vw;
+  margin-right: 5vw;
+  border-radius: 50px;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
 .ticket-notFound {
   background: rgba(172, 213, 214, 0.658);
   width: 90vw;
@@ -37,4 +47,11 @@
 }
 .label-span {
   margin-left: 85%;
+}
+
+.doneButton {
+  font-size: 18px;
+  background: none;
+  border: none;
+  width: fit-content;
 }
