add delete ticket functionality
the action does not delete from the data base, it just does not show it in the UI.

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -8,7 +8,10 @@
     rgba(13, 134, 159, 1) 100%
   );
 }
-
+.body {
+  min-height: 100vh;
+  max-height: fit-content;
+}
 header {
   font-size: 100px;
   background: rgb(25, 156, 158);
